<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dc_white_color"
    android:paddingLeft="@dimen/order_list_left_padding"
    android:paddingRight="@dimen/order_list_right_padding"
    android:paddingTop="@dimen/order_list_top_padding"
    android:paddingBottom="5dp">

    <LinearLayout
        android:id="@+id/order_list_view_linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/order_list_bottom_margin">

        <TextView
            android:id="@+id/order_list_view_patient_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/order_list_view_items_dummy_name"
            android:textSize="16dp"/>

        <TextView
            android:id="@+id/order_list_view_order_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:text="DC001"
            android:textSize="15dp"
            android:textColor="@color/lightTextColor"/>

    </LinearLayout>

    <TextView
        android:id="@+id/order_list_view_medicine_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/order_list_bottom_margin"
        android:text="@string/order_list_view_items_dummy_medicine_list"
        android:textColor="@color/lightTextColor"
        android:textSize="13dp"/>

    <LinearLayout
        android:id="@+id/order_list_view_linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/order_list_view_order_expire_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/order_list_view_items_dummy_order_expire_text"
            android:visibility="gone"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/order_list_view_expiration_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/order_list_view_items_dummy_expire_time"
            android:textSize="15dp"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/order_list_view_linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/order_list_view_cancel_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_list_view_items_dummy_cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:gravity="left|center_vertical"
            android:background="@drawable/button_style"
            android:textAllCaps="false"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

        <Button
            android:layout_gravity="right"
            android:background="@drawable/button_style"
            android:id="@+id/order_list_view_open_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:layout_weight="1"
            android:text="@string/order_list_view_items_dummy_open"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>